<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">



    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       app:cardElevation="25dp"
        android:backgroundTint="@color/card"
        android:layout_margin="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:id="@+id/question"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="4dp"
                />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_margin="4dp"
                android:text="@string/a" />
            <TextView
                android:id="@+id/option_a"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_margin="4dp"
               /></LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_margin="4dp"
                android:text="@string/b" />
            <TextView
                android:id="@+id/option_b"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_margin="4dp"
                /></LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_margin="4dp"
                android:text="@string/c" />
            <TextView
                android:id="@+id/option_c"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_margin="4dp"
                /></LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_margin="4dp"
                android:text="@string/d" />
            <TextView
                android:id="@+id/option_d"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_margin="4dp"
                /></LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/answerEdi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginStart="100dp"
                    android:hint="@string/answer" />
                <Button
                    android:id="@+id/submitAnswer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="100dp"
                    android:text="@string/confirm1"
                    /></LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</layout>