<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="@drawable/candidate"
        android:orientation="vertical"
        tools:context=".UserSignUpFragment">

        <!-- TODO: Update blank fragment layout -->
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login_card"

            app:cardElevation="15dp"
            android:shadowColor="@color/grey"
            android:layout_margin="16dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:endIconMode="clear_text"
                    app:startIconDrawable="@drawable/ic_baseline_mail_24"
                    app:startIconContentDescription="@string/password">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/emai"
                        android:inputType="textEmailAddress"
                        android:id="@+id/email"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:endIconMode="password_toggle"
                    app:startIconDrawable="@drawable/ic_baseline_lock_open_24"
                    app:startIconContentDescription="@string/password">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:id="@+id/password"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:endIconMode="password_toggle"
                    app:startIconDrawable="@drawable/ic_baseline_lock_open_24"
                    app:startIconContentDescription="@string/confirm_password">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/confirm_password"
                        android:id="@+id/confirmPassword"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home"
                android:backgroundTint="@color/grey"
                android:src="@drawable/ic_baseline_arrow_back_ios_24"
                android:layout_margin="20dp"
                android:id="@+id/login"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:background="@drawable/shape"
                android:layout_marginTop="20dp"

                android:layout_marginStart="150dp"
                android:id="@+id/sign"
                />
        </LinearLayout>
    </LinearLayout>
</layout>